# phlower-tensor

./: .gitlab-ci.yml  LICENSE  Makefile  Makefile.docker  README.md  pyproject.toml
docker/: cpu.Dockerfile  gpu.Dockerfile
src/phlower_tensor/: __init__.py
src/phlower_tensor/_array/: __init__.py  _interface_wrapper.py  _phlower_array.py
src/phlower_tensor/_array/dense/: _ndarray_wrapper.py
src/phlower_tensor/_array/sparse/: _sparse_array_wrapper.py
src/phlower_tensor/_base/: __init__.py  _dimension.py
src/phlower_tensor/_batch/: __init__.py  _batch.py
src/phlower_tensor/_fields/: __init__.py  _simulation_field.py
src/phlower_tensor/_tensor/: __init__.py  __init__.pyi  _dimension_tensor.py  _phlower_tensor.py  _phlower_tensor.pyi  _tensor_shape.py
src/phlower_tensor/_tensor/_dimension/: __init__.py  __init__.pyi  _dimension_tensor.py  _dimension_tensor.pyi
src/phlower_tensor/collections/: __init__.py
src/phlower_tensor/collections/arrays/: __init__.py  _arrays_dict.py
src/phlower_tensor/collections/tensors/: __init__.py  _interface.py  _tensor_collections.py
src/phlower_tensor/functionals/: __init__.py  __init__.pyi  _broadcast_to.py  _check.py  _concatenate.py  _functions.py  _spmm.py  _to_batch.py  _to_batch.pyi  _unbatch.py  _unbatch.pyi
src/phlower_tensor/utils/: __init__.py  _logging.py  enums.py  exceptions.py  sentinel.py  typing.py
tests/: test_dimensions.py
tests/gpu_tests/test_base/test_tensors/: test_dimensions_gpu.py  test_phlower_tensor_gpu.py
tests/test_array/: test_dense_array_wrapper.py  test_sparse_array_wrapper.py
tests/test_collections/test_arrays/: test_arrays_dict.py
tests/test_collections/test_tensors/: test_tensor_collections.py
tests/test_fields/: test_simulation_field.py
tests/test_functionals/: conftest.py  test_batch.py  test_broadcast_to.py  test_check.py  test_functions.py  test_spmm.py  test_unbatch.py
tests/test_tensors/: test_dimensions.py  test_phlower_tensor.py  test_tensor_shape.py  test_torch_functions.py
